--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-.App {
-}
-
 ul {
   list-style-type: none;
 }
@@ -21,6 +18,7 @@ ul {
   font-weight: bold;
   animation: blink 
       1s linear infinite;
+  line-height: 0px;
 }
 
 .lines li .blink {
@@ -29,6 +27,10 @@ ul {
 
 .lines li:last-child .blink {
   display: inline;
+}
+
+.lines li {
+  height: 30px
 }
 
 @keyframes blink {
