--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,12 @@ input:focus {outline:none!important;}
 .lines li .choice.active {
   font-weight: bold;
   text-decoration: underline;
+  text-decoration-color: white;
+}
+
+.choices div {
+  display: inline;
+  margin-left: 7px;
 }
 
 @keyframes blink {
