--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,12 @@ input:focus {outline:none!important;}
   text-decoration-color: white;
 }
 
+.lines div {
+  display: flex;
+  justify-content: space-between;
+  margin-right:20px;
+}
+
 .choices div {
   display: inline;
   margin-left: 7px;
